Created a css file.
Created a css file.
Added some styling and seperated the title from the rest of the page using div and hr,

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1/>Testing
-</body>
+<html lang="en-GB">
+
+	<head>
+		<title alt="Matt Young. Personal projects.">Matt Young - Personal Projects</title>
+		<link rel="stylesheet" href="stylesheet.css">
+		<meta charset="UTF-8">
+	</head>
+
+	<body>
+		<div id="titleBar">
+			<h1 id="title" alt="Matt Young. Personal projects.">Matt Young - Personal Projects</h1>
+		</div>
+		<hr noshade>
+	</body>
+
 </html>
