Created the Projects page.
Created the Projects page.
Added a navigation bar with links.
Made the title at the top of the page a link.

--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
 			<a id="title"  href="index.html"><h1 alt="Matt Young. Personal projects.">Matt Young - Personal Projects</h1></a>
 		</div>
 		<ul>
-			<li class="active"><a href="index.html">Home</a></li>
-			<li><a href="projects.html">Projects</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li class="active"><a href="projects.html">Projects</a></li>
 		</ul>
 	</body>
 
