Added a page for a project
Added a page for my "Compiler Implementation in Java" project.
Also made the navbar fill the remaining height of the page.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
 	<body>
 		<div id="titleBar">
-			<a id="title"  href="index.html"><h1 alt="Matt Young. Personal projects.">Matt Young - Personal Projects</h1></a>
+			<a id="title"  href="index.html"><h1 alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</h1></a>
 		</div>
-		<ul>
-			<li class="active"><a href="index.html">Home</a></li>
-			<li><a href="projects.html">Projects</a></li>
-		</ul>
+		<div id="navbar">
+			<ul>
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="projects.html">Projects</a></li>
+			</ul>
+		</div>
+		<div id="content">
+		</div>
 	</body>
 
 </html>
