--- a/compImp.html
+++ b/compImp.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en-GB">
 
 	<head>
@@ -14,11 +13,10 @@
 		<div id="navbar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="projects.html">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</div>
 		<div id="content">
-			<a href="compImp.html">Compiler Implementation in Java</a>
 		</div>
 	</body>
 
