--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 			</ul>
 		</div>
 		<div id="content">
-			<a href="compImp.html">Compiler Implementation in Java</a>
+			<a href="compimp/compimp.html">Compiler Implementation in Java</a>
 		</div>
 	</body>
 
