--- a/compimp/compimp.html
+++ b/compimp/compimp.html
@@ -13,8 +13,8 @@
 		</div>
 		<div id="navbar">
 			<ul>
-				<li><a href="../index.html">Home</a></li>
-				<li><a href="../projects.html">Projects</a></li>
+				<a href="../index.html"><li>Home</li></a>
+				<a href="../projects.html"><li>Projects</li></a>
 			</ul>
 		</div>
 		<div id="content">
