Added content to the Compiler Implementation in Java project page
Added a description to the Compiler Implementation in Java project page.
Also provided links to the GitHub Repo, a pdf of the book, and the tools that I used for the project.

--- a/compimp/compimp.html
+++ b/compimp/compimp.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 	<head>
-		<title alt="Matt Young. Personal projects.">Matt Young - Personal Projects</title>
+		<title alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</title>
 		<link rel="stylesheet" href="../stylesheet.css">
 		<meta charset="UTF-8">
 	</head>
@@ -17,7 +17,21 @@
 				<a href="../projects.html"><li>Projects</li></a>
 			</ul>
 		</div>
-		<div id="content">
+		<div id="content"><br/>
+			<h2>Compiler Implementation in Java</h2><br/>
+			For this project I am following along with the Modern Compiler Implementation in Java book by Andrew Appel. A link to a pdf of the book can be found 
+			<a href="https://eden.dei.uc.pt/~amilcar/pdf/CompilerInJava.pdf" id="niceln">here</a>.<br/><br/>
+			The code for this project can be found on my github: 
+			<a href="https://github.com/MattYoung-UoY/CompilerImplementationInJava" id="niceln">Compiler Implementation in Java</a>.<br/><br/>
+			<h3>Tools:</h3><br/>
+			The book recommends to use the JLex Lexer Generator and CUP (Construction of Useful Parsers) Parser Generator tools. However I have decided that instead I would use JFlex as my Lexer Generator.<br/><br/>
+			<a href="https://www.jflex.de/" id="niceln">JFlex Lexer Generator</a><br/>
+			<a href="http://www2.cs.tum.edu/projects/cup/" id="niceln">CUP Parser Generator</a><br/><br/>
+			<h3>Posts:</h3><br/>
+			<a href="#" id="niceln">Chapter 1 Excercise: Straight Line Language Interpreter</a><br/>
+			<a href="#" id="niceln">Chapter 2 Excercise: Tiger Language Lexer</a><br/>
+			<a href="#" id="niceln">Straight Line Language Lexer</a><br/>
+			<a href="#" id="niceln">Chapter 3 Excercise: Tiger Language Parser</a><br/>
 		</div>
 	</body>
 
