--- a/dejavu/dejavu.html
+++ b/dejavu/dejavu.html
@@ -3,7 +3,7 @@
 
 	<head>		
 		<title alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</title>
-		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="stylesheet" href="../stylesheet.css">
 		<meta charset="UTF-8">
 	</head>
 
@@ -13,11 +13,12 @@
 		</div>
 		<div id="navbar">
 			<ul>
-				<a href="index.html"><li class="active">Home</li></a>
-				<a href="projects.html"><li>Projects</li></a>
+				<a href="../index.html"><li>Home</li></a>
+				<a href="../projects.html"><li>Projects</li></a>
 			</ul>
 		</div>
 		<div id="content"><br/>
+			<h2>DeJaVu - Java 2D Game Engine</h2><br/>
 		</div>
 	</body>
 
