--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 	<head>
-		<title alt="Matt Young. Personal projects.">Matt Young - Personal Projects</title>
+		<title alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</title>
 		<link rel="stylesheet" href="stylesheet.css">
 		<meta charset="UTF-8">
 	</head>
@@ -20,11 +20,11 @@
 		<div id="content"><br/>
 			<h2>Project List</h2><br/>
 			<h3>Compilers:</h3>
-			<a href="compimp/compimp.html" id="project">Compiler Implementation in Java</a><br/><br/>
+			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java</a><br/><br/>
 			<h3>Hardware:</h3>
-			<a href="compimp/compimp.html" id="project">Breadboard Computer</a><br/><br/>
+			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer</a><br/><br/>
 			<h3>Game Development:</h3>
-			<a href="compimp/compimp.html" id="project">DeJaVu 2D Java Game Engine</a><br/><br/>
+			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine</a><br/><br/>
 		</div>
 	</body>
 
