Added content for the project pages
Added content for the project pages describing each project.
Also added pages for all but one of the linked posts.
Made the padding for the content div also apply to the right.
Created a template file for pages that are in a subdirectory.

--- a/bbcomp/bbcomp.html
+++ b/bbcomp/bbcomp.html
@@ -19,6 +19,14 @@
 		</div>
 		<div id="content"><br/>
 			<h2>Breadboard Computer</h2><br/>
+			For this project I am creating a computer on a breadboard.<br/><br/>
+			My end goal is to transfer the components onto PCBs.<br/><br/>
+			I will also be altering the design of the computer to make it modular, such that modules can be swapped easilly, eg. clock modules, register modules.<br/><br/>
+			<h3>Resources:</h3><br/>
+			I am following along with the tutorial series by Ben Eater.<br/><br/>
+			<a href="https://www.youtube.com/playlist?list=PLowKtXNTBypGqImE405J2565dvjafglHU" id="niceln">Ben Eater Tutorial Playlist</a><br/><br/>
+			<h3>Posts:</h3></br>
+			<a href="clock.html" id="niceln">Clock Circuit</a>
 		</div>
 	</body>
 
