--- a/compimp/compimp.html
+++ b/compimp/compimp.html
@@ -28,10 +28,10 @@
 			<a href="https://www.jflex.de/" id="niceln">JFlex Lexer Generator</a><br/>
 			<a href="http://www2.cs.tum.edu/projects/cup/" id="niceln">CUP Parser Generator</a><br/><br/>
 			<h3>Posts:</h3><br/>
-			<a href="#" id="niceln">Chapter 1 Excercise: Straight Line Language Interpreter</a><br/>
-			<a href="#" id="niceln">Chapter 2 Excercise: Tiger Language Lexer</a><br/>
-			<a href="#" id="niceln">Straight Line Language Lexer</a><br/>
-			<a href="#" id="niceln">Chapter 3 Excercise: Tiger Language Parser</a><br/>
+			<a href="cp1ex.html" id="niceln">Chapter 1 Excercise: Straight Line Language Interpreter</a><br/>
+			<a href="cp2ex.html" id="niceln">Chapter 2 Excercise: Tiger Language Lexer</a><br/>
+			<a href="slllex.html" id="niceln">Straight Line Language Lexer</a><br/>
+			<a href="cp3ex.html" id="niceln">Chapter 3 Excercise: Tiger Language Parser</a><br/>
 		</div>
 	</body>
 
