--- a/dejavu/dejavu.html
+++ b/dejavu/dejavu.html
@@ -19,6 +19,18 @@
 		</div>
 		<div id="content"><br/>
 			<h2>DeJaVu - Java 2D Game Engine</h2><br/>
+			In this project I am creating a 2D game engine called DeJaVu. The name is from the theme of the game jam in which development of this game engine started.<br/><br/>
+			The GitHub repository for the project can be found <a href="https://github.com/MattYoung-UoY/DeJaVu" id="niceln">here</a>.<br/><br/>
+			<h3>Resources:</h3><br/>
+			The DeJaVu engine is developed using the Leightweight Java Game Library (LWJGL) version 2 Java binding for OpenGL and OpenAL. I am also using Slick-Util for image loading.<br/><br/>
+			I am using a tutorial series on 3D Java Game Programming using LWJGL by ThinMatrix for reference. I am also using the Eighth Edition of OpenGL Programming Guide, and the Second Edition of OpenGL 4 Shading Language Cookbook for reference.<br/><br/>
+			<a href="http://legacy.lwjgl.org/" id="niceln">Leightweight Java Game Library</a><br/>
+			<a href="http://slick.ninjacave.com/slick-util/" id="niceln">Slick-Util</a><br/>
+			<a href="https://www.youtube.com/playlist?list=PLRIWtICgwaX0u7Rf9zkZhLoLuZVfUksDP" id="niceln">ThinMatrix Tutorial Series</a><br/>
+			<a href="https://www.cs.utexas.edu/users/fussell/courses/cs354/handouts/Addison.Wesley.OpenGL.Programming.Guide.8th.Edition.Mar.2013.ISBN.0321773039.pdf" id="niceln">OpenGL Programming Guide</a><br/>
+			<a href="https://www.amazon.co.uk/OpenGL-Shading-Language-Cookbook-Second/dp/1782167021" id="niceln">OpenGL 4 Shading Language Cookbook</a><br/><br/>
+			<h3>Posts:</h3></br>
+			<a href="#" id="niceln">Error Logging</a>
 		</div>
 	</body>
 
