--- a/bbcomp/clock.html
+++ b/bbcomp/clock.html
@@ -3,18 +3,18 @@
 
 	<head>		
 		<title alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</title>
-		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="stylesheet" href="../stylesheet.css">
 		<meta charset="UTF-8">
 	</head>
 
 	<body>
 		<div id="titleBar">
-			<a id="title"  href="index.html"><h1 alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</h1></a>
+			<a id="title"  href="../index.html"><h1 alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</h1></a>
 		</div>
 		<div id="navbar">
 			<ul>
-				<a href="index.html"><li>Home</li></a>
-				<a href="projects.html"><li>Projects</li></a>
+				<a href="../index.html"><li>Home</li></a>
+				<a href="../projects.html"><li>Projects</li></a>
 			</ul>
 		</div>
 		<div id="content"><br/>
