Created formula boxes
Created formula boxes to display things like formulae, grammars, diagrams, etc.

--- a/dejavu/dejavu.html
+++ b/dejavu/dejavu.html
@@ -30,7 +30,7 @@
 			<a href="https://www.cs.utexas.edu/users/fussell/courses/cs354/handouts/Addison.Wesley.OpenGL.Programming.Guide.8th.Edition.Mar.2013.ISBN.0321773039.pdf" id="niceln">OpenGL Programming Guide</a><br/>
 			<a href="https://www.amazon.co.uk/OpenGL-Shading-Language-Cookbook-Second/dp/1782167021" id="niceln">OpenGL 4 Shading Language Cookbook</a><br/><br/>
 			<h3>Posts:</h3></br>
-			<a href="#" id="niceln">Error Logging</a>
+			<a href="errorlogging.html" id="niceln">Error Logging</a>
 		</div>
 	</body>
 
