--- a/compimp/compimp.html
+++ b/compimp/compimp.html
@@ -4,10 +4,11 @@
 	<head>
 		<title alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</title>
 		<link rel="stylesheet" href="../stylesheet.css">
+		<script src="../navbar.js"></script>
 		<meta charset="UTF-8">
 	</head>
 
-	<body>
+	<body onload="load()" onresize="resize()" onscroll="update()">
 		<div id="titleBar">
 			<a id="title"  href="../index.html"><h1 alt="Project Showcase. Matt Young.">Project Showcase - Matt Young</h1></a>
 		</div>
