--- a/compimp/sllpar.html
+++ b/compimp/sllpar.html
@@ -19,7 +19,7 @@
 			</ul>
 		</div>
 		<div id="content"><br/>
-			<h2 id="title">Straight-Line Language Parser</h2><br/>
+			<h2 id="title">Straight Line Language Parser</h2><br/>
 			
 			<h3>Setup:</h3><br/>
 			I downloaded the <a href="https://www.cs.princeton.edu/~appel/modern/java/chap3/" id="niceln">skeleton code</a> as per usual. 
