--- a/compimp/compimp.html
+++ b/compimp/compimp.html
@@ -21,7 +21,8 @@
 		<div id="content"><br/>
 			<h2>Compiler Implementation in Java</h2><br/>
 			For this project I am following along with the Modern Compiler Implementation in Java book by Andrew Appel. A link to a pdf of the book can be found 
-			<a href="mciij.pdf" id="niceln">here</a>.<br/><br/>
+			<a href="mciij.pdf" id="niceln">here</a>.
+			To start with I implemented the Straight Line Language described in the book, and go up to the end of Chapter 5, as well as including the content from Chapters 7, 9, 11, and 12.<br/><br/>
 			The code for this project can be found on my github: 
 			<a href="https://github.com/MattYoung-UoY/CompilerImplementationInJava" id="niceln">Compiler Implementation in Java</a>.<br/><br/>
 			<h3>Tools:</h3><br/>
@@ -29,10 +30,12 @@
 			<a href="https://www.jflex.de/" id="niceln">JFlex Lexer Generator</a><br/>
 			<a href="http://www2.cs.tum.edu/projects/cup/" id="niceln">CUP Parser Generator</a><br/><br/>
 			<h3>Posts:</h3><br/>
+			<h4>Straight Line Language Implementation:</h4>
 			<a href="cp1ex.html" id="niceln">Chapter 1 Excercise: Straight Line Language Interpreter</a><br/>
 			<a href="slllex.html" id="niceln">Straight Line Language Lexer</a><br/>
+			<a href="sllpar.html" id="niceln">Straight Line Language Parser</a><br/><br/>
+			<h4>Tiger Language Implementation:</h4>
 			<a href="cp2ex.html" id="niceln">Chapter 2 Excercise: Tiger Language Lexer</a><br/>
-			<a href="sllpar.html" id="niceln">Straight Line Language Parser</a><br/>
 			<a href="cp3ex.html" id="niceln">Chapter 3 Excercise: Tiger Language Parser</a><br/>
 		</div>
 	</body>
