--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,8 @@
 		</div>
 		<div id="content"><br/>
 			<h2>Project List</h2><br/>
+			<h3>Artificial Intelligence:</h3>
+			<a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks</a><br/><br/>
 			<h3>Compilers:</h3>
 			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java</a><br/><br/>
 			<h3>Hardware:</h3>
