--- a/nnintro/nnintro.html
+++ b/nnintro/nnintro.html
@@ -29,7 +29,8 @@
 			<h3>Tools:</h3><br/>
 			For the first part of the project, I will be using randomly generate datasets that I have created through my code.<br/>
 			Later on in the project, I will be working on a larger Neural Network to recognise hand-written digits.
-			To train and test this Neural Network I will be using the <a href="http://yann.lecun.com/exdb/mnist/" id="niceln">MNIST Dataset</a>.<br/><br/>
+			To train and test this Neural Network I will be using the MNIST Dataset.<br/><br/>
+			<a href="http://yann.lecun.com/exdb/mnist/" id="niceln">MNIST Dataset</a><br/><br/>
 			
 			<h3>Posts:</h3><br/>
 			<h4>Perceptron Program:</h4>
