--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,8 @@
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer</a><br/><br/>
 			<h3>Game Development:</h3>
 			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine</a><br/><br/>
+			<h3>Assembly:</h3>
+			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly</a><br/><br/>
 		</div>
 	</body>
 
