--- a/ld47/circles.html
+++ b/ld47/circles.html
@@ -3,11 +3,14 @@
     <head>
         <script src="../libs/p5.js"></script>
         <script src="sketch.js"></script>
+		<style>
+		* {
+			margin: 0px;
+		}
+		</style>
     </head>
 
     <body>
-        <main>
-        </main>
     </body>
 
 </html>
