Added links to more projects and posts
Added links to more projects and posts.
Links are to current page as dedicated pages are yet to be implemented.

--- a/projects.html
+++ b/projects.html
@@ -22,14 +22,17 @@
 			<h2>Project List</h2><br/>
 			<h3>Artificial Intelligence:</h3>
 			<a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks</a><br/><br/>
+			<h3>Assembly:</h3>
+			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly</a><br/><br/>
 			<h3>Compilers:</h3>
 			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java</a><br/><br/>
 			<h3>Hardware:</h3>
+			<a href="#" id="niceln">Nerf Gun Trigger Clock Circuit</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer</a><br/><br/>
 			<h3>Game Development:</h3>
 			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine</a><br/><br/>
-			<h3>Assembly:</h3>
-			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly</a><br/><br/>
+			<h3>Quantum Computing:</h3>
+			<a href="#" id="niceln">Quantum Simulation Library</a><br/><br/>
 		</div>
 	</body>
 
