--- a/mlintro/mlintro.html
+++ b/mlintro/mlintro.html
@@ -19,7 +19,7 @@
 			</ul>
 		</div>
 		<div id="content"><br/>
-			<a href="LinRegEx.pdf">Linear Regression Example</a>
+			<a href="linRegEx.pdf">Linear Regression Example</a>
 		</div>
 	</body>
 
