Updated the Projects Page
Finished the page for the Linear Regression Tutorial.
Began to write the nnintro and nerfclk pages

--- a/learnx86/learnx86.html
+++ b/learnx86/learnx86.html
@@ -27,7 +27,7 @@
 			<h3>Tools:</h3><br/>
 			I am using the default Gnu Compiler Collection (GCC) to Assemble my code and Link my object files.<br/>
 			I am using Arch Linux to program and test the code.<br/>
-			The text editor of choice is the command line editor Vim, and I will be using HexEdit to expore the generated files.<br/><br/>
+			The text editor of choice is the command line editor Vim, and I will be using HexEdit to explore the generated files.<br/><br/>
 			<a href="https://gcc.gnu.org/" id="niceln">GCC</a><br/>
 			<a href="https://www.archlinux.org/" id="niceln">Arch Linux</a><br/>
 			<a href="https://www.vim.org/" id="niceln">Vim</a><br/><br/>
