--- a/ml/linreg.html
+++ b/ml/linreg.html
@@ -19,7 +19,14 @@
 			</ul>
 		</div>
 		<div id="content"><br/>
-			<a href="linRegEx.pdf">Linear Regression Example</a>
+			<h2>Linear Regression</h2><br/>
+			Linear Regression is one of the most fundamental Regression techniques used in Machine Learning.<br/><br/>
+			A "training set" of data is used to create the model.
+			The model created is a straight line (hence linear) that has the lowest possible error with the training set.
+			The model can then be used to predict new, unseen data.<br/><br/>
+			It is used as a basis for more complicated techniques such as Lasso and Ridge regression.<br/><br/>
+			Here is an example of how to do Linear Regression by hand:<br/>
+			<a href="linRegEx.pdf" id="niceln">Linear Regression Example</a>
 		</div>
 	</body>
 
