--- a/nnintro/nnintro.html
+++ b/nnintro/nnintro.html
@@ -35,6 +35,7 @@
 			<h3>Posts:</h3><br/>
 			<h4>Perceptron Program:</h4>
 			<a href="randat.html" id="niceln">Randomly Generated Datasets</a><br/>
+			<a href="#" id="niceln">The Perceptron</a>
 		</div>
 	</body>
 
