--- a/projects.html
+++ b/projects.html
@@ -21,18 +21,27 @@
 		<div id="content"><br/>
 			<h2>Project List</h2><br/>
 			<h3>Artificial Intelligence:</h3>
-			<a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks</a><br/><br/>
+			<a href="nnintro/nnintro.html" id="niceln">Introduction to Neural Networks (WIP)</a><br/><br/>
 			<h3>Assembly:</h3>
-			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly</a><br/><br/>
+			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly (WIP)</a><br/><br/>
 			<h3>Compilers:</h3>
-			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java</a><br/><br/>
-			<h3>Hardware:</h3>
-			<a href="#" id="niceln">Nerf Gun Trigger Clock Circuit</a><br/>
-			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer</a><br/><br/>
+			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java (WIP)</a><br/>
+			<a href="#" id="niceln">NASM To GAS Transpiler (WIP)</a><br/>
+			<a href="#" id="niceln">Comet Programming Language (WIP)</a><br/><br/>
 			<h3>Game Development:</h3>
-			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine</a><br/><br/>
+			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine (WIP)</a><br/><br/>
+			<h3>Hardware:</h3>
+			<a href="nerfclk/nerfclk.html" id="niceln">Nerf Gun Trigger Clock Circuit (WIP)</a><br/>
+			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
+			<a href="#" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
+			<a href="#" id="niceln">CPU Design Intro (WIP)</a><br/><br/>
+			<h3>Machine Learning:</h3>
+			<a href="ml/linreg.html" id="niceln">Linear Regression</a><br/><br/>
+			<h3>Operating Systems</h3>
+			<a href="#" id="niceln">Bare Bones (WIP)</a><br/>
+			<a href="#" id="niceln">Extended Bare Bones (WIP)</a><br/><br/>
 			<h3>Quantum Computing:</h3>
-			<a href="#" id="niceln">Quantum Simulation Library</a><br/><br/>
+			<a href="#" id="niceln">Quantum Simulation Library (WIP)</a><br/><br/>
 		</div>
 	</body>
 
