Started working on the Learning x86 pages
Started work on the Tutorial 1 page

--- a/learnx86/learnx86.html
+++ b/learnx86/learnx86.html
@@ -25,14 +25,14 @@
 			The tutorial series can be found here: <a href="https://www.youtube.com/watch?v=wLXIWKUWpSs&list=PLmxT2pVYo5LB5EzTPZGfFN0c2GDiSXgQe" id="niceln">x86 Tutorials by Davy Wybiral</a>.<br/><br/>
 			The code for this project can be found on my GitHub: <a href="https://github.com/MattYoung-UoY/x86_tutorials_davy_wybiral" id="niceln">x86 Tutorials</a>.<br/><br/>
 			<h3>Tools:</h3><br/>
-			I am using the default Gnu Compiler Collection (GCC) to Assemble my code and Link my object files.<br/>
+			I am using the Gnu Compiler Collection (GCC) to Assemble my code and Link my Object Files.<br/>
 			I am using Arch Linux to program and test the code.<br/>
-			The text editor of choice is the command line editor Vim, and I will be using HexEdit to explore the generated files.<br/><br/>
+			The text editor of choice is the command line editor Vim.<br/><br/>
 			<a href="https://gcc.gnu.org/" id="niceln">GCC</a><br/>
 			<a href="https://www.archlinux.org/" id="niceln">Arch Linux</a><br/>
 			<a href="https://www.vim.org/" id="niceln">Vim</a><br/><br/>
 			<h3>Posts:</h3><br/>
-			<a href="#" id="niceln">Tutorial 1: Hello World</a>
+			<a href="t1.html" id="niceln">Tutorial 1: Hello World</a>
 		</div>
 	</body>
 
