--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,13 @@
 			<a href="learnx86/learnx86.html" id="niceln">Learning x86 Assembly (WIP)</a><br/><br/>
 			<h3>Compilers:</h3>
 			<a href="compimp/compimp.html" id="niceln">Compiler Implementation in Java (WIP)</a><br/>
-			<a href="#" id="niceln">NASM To GAS Transpiler (WIP)</a><br/>
 			<a href="#" id="niceln">Comet Programming Language (WIP)</a><br/><br/>
 			<h3>Game Development:</h3>
-			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine (WIP)</a><br/><br/>
+			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine (WIP)</a><br/>
+			<a href="#" id="niceln">Hexagonal Grids(WIP)</a><br/>
+			<a href="#" id="niceln">Mouse Picking (WIP)</a><br/><br/>
 			<h3>Hardware:</h3>
+			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
 			<a href="nerfclk/nerfclk.html" id="niceln">Nerf Gun Trigger Clock Circuit (WIP)</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
 			<a href="#" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
