Began work on the Sustainable Folding Project

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
 			<a href="nerfclk/nerfclk.html" id="niceln">Nerf Gun Trigger Clock Circuit (WIP)</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
-			<a href="#" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
+			<a href="susfah/susfah.html" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
 			<a href="#" id="niceln">CPU Design Intro (WIP)</a><br/><br/>
 			<h3>Machine Learning:</h3>
 			<a href="ml/linreg.html" id="niceln">Linear Regression</a><br/><br/>
