Added more links to the Projects Page

--- a/projects.html
+++ b/projects.html
@@ -30,13 +30,16 @@
 			<h3>Game Development:</h3>
 			<a href="dejavu/dejavu.html" id="niceln">DeJaVu - Java 2D Game Engine (WIP)</a><br/>
 			<a href="#" id="niceln">Hexagonal Grids(WIP)</a><br/>
-			<a href="#" id="niceln">Mouse Picking (WIP)</a><br/><br/>
+			<a href="#" id="niceln">Mouse Picking (WIP)</a><br/>
+			<a href="#" id="niceln">Game Boy Emulator (WIP)</a><br/><br/>
 			<h3>Hardware:</h3>
 			<a href="#" id="niceln">Desktop Power Supply (WIP)</a><br/>
 			<a href="nerfclk/nerfclk.html" id="niceln">Nerf Gun Trigger Clock Circuit (WIP)</a><br/>
 			<a href="bbcomp/bbcomp.html" id="niceln">Breadboard Computer (WIP)</a><br/>
 			<a href="susfah/susfah.html" id="niceln">Sustainable Folding At Home (WIP)</a><br/>
 			<a href="#" id="niceln">CPU Design Intro (WIP)</a><br/><br/>
+			<h3>Image Processing:</h3>
+			<a href="#" id="niceln">Comet Colour - Image to Lego Bricks (WIP)</a><br/><br/>
 			<h3>Machine Learning:</h3>
 			<a href="ml/linreg.html" id="niceln">Linear Regression</a><br/><br/>
 			<h3>Operating Systems</h3>
